style updates, rotation of axis

--- a/angle/index.html
+++ b/angle/index.html
@@ -4,7 +4,7 @@
   <link rel="stylesheet" href="main.css" type="text/css">
   <script type="text/javascript" src="../lib/js/jquery.js"></script>
   <script type="text/javascript" src="app.js"></script>
-  <title>JSClock</title>
+  <title>Angle</title>
 </head>
 
 <body>
