analytics and addition of small experiments to site

--- a/nolancarroll/index.html
+++ b/nolancarroll/index.html
@@ -47,6 +47,11 @@
 	    				<span class="desc">
 	    					A javascript project that takes an image, pixellates it to a single block, and reveals more detail as the mouse is moved
 	    				</span>
+	    				<h2>small experiments</h2>
+	    				<span class="note">tested only in firefox + Chrome + Safari</span>
+	    				<a class="line" href="http://www.nolandc.com/smalljs/tictactoe/" target="_blank">Tic Tac Toe</a>
+	    				<a class="line" href="http://www.nolandc.com/smalljs/clock/" target="_blank">Clock</a>
+	    				<a class="line" href="http://www.nolandc.com/smalljs/slider/" target="_blank">Modal Slider</a>
 	    			</div>
 	    		</div>
 
