--- a/tictactoe/index.html
+++ b/tictactoe/index.html
@@ -4,6 +4,17 @@
   <link rel="stylesheet" href="main.css" type="text/css">
   <script type="text/javascript" src="../lib/js/jquery.js"></script>
   <script type="text/javascript" src="app.js"></script>
+  <script type="text/javascript">
+    var _gaq = _gaq || [];
+        _gaq.push(['_setAccount', 'UA-10637742-1']);
+        _gaq.push(['_trackPageview']);
+
+    (function() {
+      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+    })();
+  </script>  
   <title>Tic Tac Toe</title>
 </head>
 
