tronsnake and analytics

--- a/nolancarroll/index.html
+++ b/nolancarroll/index.html
@@ -50,6 +50,8 @@
 	    				<h2>small experiments</h2>
 	    				<span class="note">tested only in firefox + Chrome + Safari</span>
 	    				<a class="line" href="http://www.nolandc.com/smalljs/tictactoe/" target="_blank">Tic Tac Toe</a>
+							<a class="line" href="http://www.nolandc.com/smalljs/snake/" target="_blank">Snake</a>
+							<a class="line" href="http://www.nolandc.com/smalljs/tronsnake/" target="_blank">Tron + Snake</a>    				
 	    				<a class="line" href="http://www.nolandc.com/smalljs/clock/" target="_blank">Clock</a>
 	    				<a class="line" href="http://www.nolandc.com/smalljs/slider/" target="_blank">Modal Slider</a>
 	    			</div>
