--- a/snake/index.html
+++ b/snake/index.html
@@ -3,7 +3,7 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 <head>
-	<title>index</title>
+	<title>Snake</title>
 	<script src="../lib/js/jquery.js" type="text/javascript"></script>
 	<script src="board.js" type="text/javascript"></script>
 	<script src="snake.js" type="text/javascript"></script>
