cleaned up mouse reveal code

--- a/mouse_reveal/index.html
+++ b/mouse_reveal/index.html
@@ -9,6 +9,7 @@
   <script type="text/javascript" src="../lib/js/jquery.js"></script>
   <script type="text/javascript" src="../lib/js/less.js"></script>
   <script type="text/javascript" src="../lib/js/mousetrap.js"></script>  
+  <script type="text/javascript" src="setup.js"></script>  
   <script type="text/javascript" src="app.js"></script>
   <script type="text/javascript">
     var _gaq = _gaq || [];
