--- a/queryables/index.html
+++ b/queryables/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Queryables</title>
-  <script type="text/javascript" src="app.js"></script>
+  <script type="text/javascript" src="queryables.js"></script>
 
 </head>
 
