addition of game of life to site

--- a/nolancarroll/index.html
+++ b/nolancarroll/index.html
@@ -47,6 +47,10 @@
 	    				<span class="desc">
 	    					A javascript project that takes an image, pixellates it to a single block, and reveals more detail as the mouse is moved
 	    				</span>
+	    				<a class="line" href="http://www.nolandc.com/smalljs/life/" target="_blank">Game of Life</a>
+	    				<span class="desc">
+	    					An implementation of Conway's game of life in Javascript + HTML. 
+	    				</span>
 	    				<h2>small experiments</h2>
 	    				<span class="note">tested only in firefox + Chrome + Safari</span>
 	    				<a class="line" href="http://www.nolandc.com/smalljs/tictactoe/" target="_blank">Tic Tac Toe</a>
