basic instructions for mouse reveal

--- a/mouse_reveal/index.html
+++ b/mouse_reveal/index.html
@@ -27,6 +27,9 @@
 <body>
   <div id="main">
     <div id="main-inner">
+      <div class="information">
+        Move the mouse over the colored squares to reveal the image.
+      </div>
 			<canvas id="canvas" width="200" height="200px">
 			</canvas>			
     </div>
