instructions for Conways game of life

--- a/life/index.html
+++ b/life/index.html
@@ -26,6 +26,13 @@
 
 <body>
   <div id="main">
+    <div id="overlay">
+      <div class="information">
+        This is an HTML & Javascript implementation of <a href="http://en.wikipedia.org/wiki/Conway's_Game_of_Life" target="_blank">John Conway's Game of Life</a>. Click and drag the mouse to activate tiles. Then click 'run' to begin the simulation. 
+        <br/><br/>
+        Click anywhere to begin.
+      </div>
+    </div>
     <div id="main-inner">
       <div id="controls">
         <a id="pause_play" class="button green" href="#">
@@ -34,6 +41,7 @@
         <a id="clear" class="button red" href="#">
           clear
         </a>
+        <a class="link" href="http://en.wikipedia.org/wiki/Conway's_Game_of_Life#Rules" target="_blank">rules</a>
       </div>
 			<div id="grid">
 
