nolancarroll: added collegestats to home page

--- a/nolancarroll/index.html
+++ b/nolancarroll/index.html
@@ -39,6 +39,10 @@
 	    		<div class="rectangle r2" id="s2" href="#">
 	    			<div class="text">work</div>
 	    			<div class="information">
+	    				 <a class="line" href="http://www.nolandc.com/collegestats" target="_blank">College Statistics Search</a>
+	    				<span class="desc">
+	    					A simple javascript tool for searching colleges and viewing basic admission and demographic statistics
+	    				</span>
 	    				<a class="line" href="http://www.nolandc.com/sandbox/fractals" target="_blank">Lindenmayer System Generator</a>
 	    				<span class="desc">
 	    					A javascript tool that, given a set of replacement rules, will generate and render the resulting Lindenmayer System
